--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -29,7 +29,7 @@ h2,
 h3 {
     font-family: $font-family-monospace;
     font-weight: 400;
-    margin: 3rem 0 2rem 0;
+    margin: 4rem 0 1rem 0;
 
     a {
         color: inherit;
@@ -139,7 +139,8 @@ p {
     }
 
     article {
-        font-size: 1.2em;
+        font-size: 1.1em;
+        line-height: 1.5;
         color: palette.$color-foreground-dark-dimmed;
     }
 
